# AInte-MLG

./: README.md  pyproject.toml
ainte_mlg/: product_loader.py  test_sheet.py  unit_price.py
generator/: label_generator.py  make_sheet.py  sheet_generator.py
mlg_labels.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
products/: products_db.json
