[project]
name = "mlg-labels"
version = "0.1.0"
description = "Label generator for product pricing in A4 sheets (20-label layout)"
authors = [
    { name="Dimitriosxal", email="xalatsis.dimitrios@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["products*", "output*"]
